Fix the overflow scrolling

--- a/src/containers/Dashboard/Favourite/FavouritePosts.module.css
+++ b/src/containers/Dashboard/Favourite/FavouritePosts.module.css
@@ -1,4 +1,6 @@
 .FavouritePosts {
     overflow: scroll;
     height: 80vh;
+    overflow-x: hidden;
+    max-width: 100%;
 }
