--- a/src/containers/Dashboard/MyPosts/MyPosts.module.css
+++ b/src/containers/Dashboard/MyPosts/MyPosts.module.css
@@ -1,3 +1,6 @@
 .MyPostContent {
     width: 100%;
+    overflow-y: scroll;
+    height: 80vh;
+    overflow-x: hidden;
 }
