--- a/src/containers/PublicPost/PublicPost.module.css
+++ b/src/containers/PublicPost/PublicPost.module.css
@@ -6,4 +6,6 @@
 .PostWrapper {
   overflow: scroll;
   height: 80vh;
+  overflow-x: hidden;
+  width: 100%;
 }
