--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,8 @@ html {
   overflow: hidden;
 }
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
